# rez-shotgun-python-api

./: CMakeLists.txt  README.md  install.sh  package.py
